fix(components): Card layout issue

--- a/components/card/style.css
+++ b/components/card/style.css
@@ -4,6 +4,7 @@
   display: block;
   width: 100%;
   height: 100%;
+  flex: 1 0;
 }
 
 [part="card"] {
