--- a/components/section/style.light.css
+++ b/components/section/style.light.css
@@ -27,8 +27,10 @@ tcds-section > [slot="heading"] {
 tcds-section > [slot="heading"] span {
   display: block;
   font-family: var(--tcds-font-ui);
-  font-size: var(--tcds-font-size-xx-large);
+  font-size: var(--tcds-font-size-large);
   font-weight: var(--tcds-font-weight-semibold);
+  color: var(--tcds-color-text);
+  margin-bottom: 0.5em;
 }
 
 tcds-section > [slot="heading"] sup {
